####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblog4cxx.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblog4cxx_a_METASOURCES = AUTO

liblog4cxx_a_SOURCES = appendermanager.cpp fileappender.cpp \
	logrotate.cpp patternlayout.cpp loggingevent.cpp \
	ilog.cpp bench.cpp layout.cpp appender.cpp logger.cpp level.cpp \
	logsession.cpp tmplogid.cpp


####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = appendermanager.h
