####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsiapi.a

INCLUDES = -I$(top_srcdir)/src

liblsiapi_a_METASOURCES = AUTO

liblsiapi_a_SOURCES = lsiapi.cpp lsimoduledata.cpp lsiapihooks.cpp modulehandler.cpp  linklist.c modulemanager.cpp lsiapilib.cpp lsiapigd.cpp envmanager.cpp 

