####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libmain.a

INCLUDES = -I$(top_srcdir)/src

libmain_a_METASOURCES = AUTO

libmain_a_SOURCES = lshttpdmain.cpp serverinfo.cpp httpserverbuilder.cpp \
	httpserver.cpp plainconf.cpp

####### kdevelop will overwrite this part!!! (end)############
