####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libquic.a

AM_CPPFLAGS =  -I$(top_srcdir)/include -I$(top_srcdir)/src

libquic_a_METASOURCES = AUTO

libquic_a_SOURCES = quicshm.cpp udplistener.cpp quicengine.cpp \
	quicstream.cpp pbset.cpp
	
####### kdevelop will overwrite this part!!! (end)############
