####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsshm.a

INCLUDES = -I$(top_srcdir)/src

liblsshm_a_METASOURCES = AUTO

liblsshm_a_SOURCES = lsshmcache.cpp lsshmlock.cpp lsshmhash.cpp lsshmpool.cpp \
    lsshm.cpp lslock.cpp lsi_shm.cpp ls_fallocate.c

####### kdevelop will overwrite this part!!! (end)############
