####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsshm.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblsshm_a_METASOURCES = AUTO

liblsshm_a_SOURCES = \
    lsshmcache.cpp \
    lsshmlock.cpp \
    lsshmlru.c \
    lsshmhash.cpp \
    lsshmlruhash.cpp \
    lsshmmemcached.cpp \
    lsshmpool.cpp \
    lsshm.cpp \
    lsi_shm.cpp \
    ls_fallocate.c

####### kdevelop will overwrite this part!!! (end)############
