####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsocket.a

INCLUDES = -I$(top_srcdir)/src

libsocket_a_METASOURCES = AUTO

libsocket_a_SOURCES = gsockaddr.cpp hostinfo.cpp tcpsockopt.cpp tcpserversocket.cpp tcpconnection.cpp \
		streamsocket.cpp serversocket.cpp coresocket.cpp 


####### kdevelop will overwrite this part!!! (end)############
