####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsslpp.a

INCLUDES = -I$(top_srcdir)/src

libsslpp_a_METASOURCES = AUTO

libsslpp_a_SOURCES = sslsession.cpp sslengine.cpp sslcert.cpp sslerror.cpp sslconnection.cpp sslcontext.cpp sslocspstapling.cpp 

####### kdevelop will overwrite this part!!! (end)############
