####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsslpp.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

libsslpp_a_METASOURCES = AUTO

libsslpp_a_SOURCES = sslengine.cpp sslcert.cpp sslerror.cpp sslconnection.cpp \
sslcontext.cpp sslocspstapling.cpp sslsesscache.cpp \
sslticket.cpp sslutil.cpp sslcontextconfig.cpp ocsp/ocsp.c ls_fdbuf_bio.c


EXTRA_DIST = sslcontext.cpp sslcontext.h sslconnection.cpp sslconnection.h \
sslerror.cpp sslerror.h sslcert.cpp sslcert.h sslengine.cpp sslengine.h \
sslutil.cpp sslutil.h sslcontextconfig.cpp \
sslcontextconfig.h ls_fdbuf_bio.h ls_fdbuf_bio.c


####### kdevelop will overwrite this part!!! (end)############
