cmake_minimum_required(VERSION 2.8)

add_subdirectory(edio)
add_subdirectory(extensions)
add_subdirectory(http)
add_subdirectory(socket)
add_subdirectory(util)


########### install files ###############


#original Makefile.am contents follow:

######## kdevelop will overwrite this part!!! (begin)##########
#
#SUBDIRS = edio extensions http socket util 
#
######## kdevelop will overwrite this part!!! (end)############
