noinst_LIBRARIES = libthread.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

libthread_a_METASOURCES = AUTO

libthread_a_SOURCES = mtnotifier.cpp pthreadcond.cpp pthreadmutex.cpp \
        pthreadworkqueue.cpp  thread.cpp  workcrew.cpp  \
        worker.cpp crewworker.cpp offloader.cpp

noinst_HEADERS = 

