####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libutil.a

INCLUDES = -I$(top_srcdir)/src
libutil_a_METASOURCES = AUTO

libutil_a_SOURCES = httpfetch.cpp httpfetchdriver.cpp ni_fio.c linkobjpool.cpp pidfile.cpp \
  hashdatacache.cpp keydata.cpp tlinklist.cpp rlimits.cpp duplicable.cpp gfactory.cpp fdpass.cpp \
  pcregex.cpp autostr.cpp staticobj.cpp pool.cpp hashstringmap.cpp \
  ghash.cpp emailsender.cpp guardedapp.cpp crashguard.cpp \
  iconnection.cpp dlinkqueue.cpp connpool.cpp gzipbuf.cpp \
  vmembuf.cpp blockbuf.cpp stringlist.cpp semaphore.cpp \
  refcounter.cpp gpointerlist.cpp linkedobj.cpp objpool.cpp \
  gpath.cpp logtracker.cpp gstring.cpp poolalloc.cpp env.cpp \
  xmlnode.cpp iovec.cpp accesscontrol.cpp signalutil.cpp \
  loopbuf.cpp stringtool.cpp tsingleton.cpp base64.cpp pcutil.cpp daemonize.cpp mysleep.c \
   misc/profiletime.cpp sysinfo/partitioninfo.cpp sysinfo/nicdetect.cpp sysinfo/systeminfo.cpp autobuf.cpp \
   configentry.cpp configctx.cpp logidtracker.cpp datetime.cpp
 
####### kdevelop will overwrite this part!!! (end)############
